manifests/bookstore.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-english
  namespace: bookstore-en
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-en
      version: english
  template:
    metadata:
      labels:
        app: bookstore-en
        version: english
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-english
  namespace: bookstore-en
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: bookstore-en
    version: english
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-german
  namespace: bookstore-de
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-de
      version: german
  template:
    metadata:
      labels:
        app: bookstore-de
        version: german
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-german
  namespace: bookstore-de
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: bookstore-de
    version: german
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-canary
  namespace: bookstore-canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-canary
      version: bookstore-canary
  template:
    metadata:
      labels:
        app: bookstore-canary
        version: bookstore-canary
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-canary
  namespace: bookstore-canary
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: bookstore-canary
    version: bookstore-canary
  ports:
  - port: 8080
    targetPort: 8080
