manifests/store.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-english
  namespace: store-en
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store-en
      version: english
  template:
    metadata:
      labels:
        app: store-en
        version: english
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-english
  namespace: store-en
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: store-en
    version: english
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-german
  namespace: store-de
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store-de
      version: german
  template:
    metadata:
      labels:
        app: store-de
        version: german
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-german
  namespace: store-de
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: store-de
    version: german
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-canary
  namespace: store-canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store-canary
      version: store-canary
  template:
    metadata:
      labels:
        app: store-canary
        version: store-canary
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-canary
  namespace: store-canary
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: store-canary
    version: store-canary
  ports:
  - port: 8080
    targetPort: 8080
