manifests/route-external-bookstore-canary.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: route-external-bookstore-canary
  namespace: bookstore-canary
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
    namespace: default
  rules:
  - matches:
    - headers:
      - name: env
        value: canary
    backendRefs:
    - name: bookstore-canary
      port: 8080
