manifests/route-internal-bookstore-canary.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: route-internal-bookstore-canary
  namespace: bookstore-canary
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
    namespace: default
  hostnames:
  - "bookstore.example.com"
  rules:
  - matches:
    - headers:
      - name: env
        value: canary
    backendRefs:
    - name: bookstore-canary
      port: 8080
