manifests/route-internal-bookstore-de.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: route-internal-bookstore-de
  namespace: bookstore-de
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
    namespace: default
  hostnames:
  - "bookstore.example.com"
  rules:
  - matches:
    - path:
      #type: PathPrefix
        value: /de
    backendRefs:
    - name: bookstore-german
      port: 8080
