manifests/route-internal-bookstore-en.yaml
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: route-internal-bookstore-en
  namespace: bookstore-en
spec:
  parentRefs:
  - kind: Gateway
    name: internal-http
    namespace: default
  hostnames:
  - "bookstore.example.com"
  rules:
  - matches:
    - path:
        value: /en
    backendRefs:
    - name: bookstore-english
      port: 8080
